--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+title: libratools
+description: A python library to process animal movement trajectories \n in the form of a series of locations (as x, y coordinates) with times.
+
