--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,3 @@
 theme: jekyll-theme-cayman
 title: libratools
-description: > 
-  A Python package for processing animal movement trajectories 
-  in the form of a series of locations (as x, y coordinates) with times.
-
+description: A Python package for processing animal movement trajectories
