--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: libratools
 description: A Python package for processing animal movement trajectories
+show_downloads: true
